--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,14 @@ name: CI
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ['1.18']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/setup-go@v3
       with:
-        go-version: '1.18'
+        go-version: ${{ matrix.go-version }}
     - uses: actions/checkout@v3
     - run: go test ./...
